--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,8 @@ project(tarea LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(tarea main.cpp)
+add_executable(tarea
+    main.cpp
+    ecuaciongaussbase.cpp
+    ecuaciongaussbase.h
+)
